@@ -1,6 +1,6 @@
 #! @PATH_PERL@ -w
 #
-# $Id: ntpsweep.in 1.2 2001/10/08 21:18:32-04:00 stenn@whimsy.udel.edu $
+# $Id: ntpsweep.in 1.3 2007/03/03 19:21:17-05:00 stenn@whimsy.udel.edu $
 #
 # DISCLAIMER
 # 
@@ -16,8 +16,7 @@
 # purpose. The name Origin B.V. must not be used to endorse or promote
 # products derived from this software without prior written permission.
 #
-# Hans Lambermont <Hans.Lambermont@nl.origin-it.com>/<H.Lambermont@chello.nl>
-# 14 Jan 2000
+# Hans Lambermont <ntpsweep@lambermont.dyndns.org>
 
 require 5.0;		# But actually tested on 5.004 ;)
 use Getopt::Long;       # GetOptions()
